2005-09-07  Roland Illig  <roland.illig@gmx.de>

	* setup.c: Renamed options[] to int_options[].
	* util.h: Added get_config_string() and set_config_string(),
	which are analogous to get_int() and set_int().
	* util.c: Likewise.

2005-09-06  Roland Illig  <roland.illig@gmx.de>

	* cmd.c: Added single_dirsize_cmd(), which computes the size of
	the currently selected panel entry and moves down. Suggested by
	ForestCreature on mc-devel.
	* cmd.h: Likewise.
	* main.c (midnight_callback): Ctrl-space calculates the size of
	the currently selected directory entry. This is mostly useful for
	directories.

2005-09-05  Roland Illig  <roland.illig@gmx.de>

	* info.c: Switched from printw() to tty_printf() to avoid gcc
	warnings. st_ctime is not the creation time, but the status
	change time.
	* achown.c: Likewise.
	* layout.c: Likewise.
	* menu.c: Likewise.
	* screen.c: Likewise.
	* main.h: Added const qualifier to the global prompt variable.
	* main.c: Likewise.
	* slint.c: Moved printwstr() to ../edit/editdraw.c.
	* tty.h: Likewise.
	* tty.c: Don't use SLsmg_write_char, because Redhat provides a
	different API to that function when the preprocessor symbol UTF8
	is defined.

2005-09-04  Roland Illig  <roland.illig@gmx.de>

	* main.h: Removed unused variables acs_hline and acs_vline.
	* tty.h: Added tty_printf().
	* tty.c: Likewise.
	* widget.c: Reduced the number of gcc warnings by using
	tty_printf() instead of printw().

2005-09-01  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_fix_cursor_position): Renamed to
	view_scroll_to_cursor.
	* treestore.c (str_common): Don't require the arguments to be
	different.

2005-08-29  Roland Illig  <roland.illig@gmx.de>

	* slint.c: The handling of user interrupts has been moved to ...
	* tty.c: ... this newly created file, which contains a simple,
	not yet complete interface to the terminal library. It should be
	used instead of depending directly on ncurses or SLang features.